--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <div class="header">
   <a class="left">Tong Fung Chuar</a>
   <div class="right">
-    <a href="info.html">Info /</a>  <a href="archive.html">Archive /</a>  <a href="Contact.html">Contact</a>
+    <a href="./info">Info /</a>  <a href="./archive">Archive /</a>  <a href="./Contact">Contact</a>
   </div>
 </div>
 
