--- a/info.html
+++ b/info.html
@@ -260,9 +260,9 @@ body, html {
     
         <div class="header">
             <!-- Use a span inside the link for the arrow to apply styles specifically to it -->
-            <a href="./" class="left"><span class="arrow">&#x27F5;</span></a>
+            <a href="./index.html" class="left"><span class="arrow">&#x27F5;</span></a>
             <div class="right">
-                <a href="./info">Info /</a>  <a href="./archive">Archive /</a>  <a href="./Contact">Contact</a>
+                <a href="./info.html">Info /</a>  <a href="./archive.html">Archive /</a>  <a href="./Contact.html">Contact</a>
               </div>
           </div>
           
