--- a/info.html
+++ b/info.html
@@ -278,7 +278,7 @@ body, html {
     <p class="subtitle">B. 1996, Hatyai, Thailand<br>Lives and works in Kuala Lumpur and Johor</p>
     <h1></h1>
     <h1></h1>
-    <p>The artist's work articulates around the specific realm where corporality and senses are introduced into the imagination. The basic gestures and items are arranged to provoke a narrative, poetic absurdity in which we reflect on our relationship with objects, languages, bodies,  and images. </p>
+    <p>Tong Fung's work articulates around the specific realm where corporality and senses are introduced into the imagination. The basic gestures and items are arranged to provoke a narrative, poetic absurdity in which we reflect on our relationship with objects, languages, bodies,  and images. </p>
     <p>The issues of spatial experience, animality, and the ingestion of food are currently the main subjects occurring in the creation process, aimed at exploring the possibility of cohabiting these themes in a relatively harmonious situation. They signify as metaphorical elements incorporated rather than literal representations of themselves.</p>
               <p></p>
               <h1></h1>
