--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   .header a {
     color: rgb(255, 255, 255);
     text-decoration: none;
-    font-family: Helvetica , sans-serif;
+    font-family: Arial, sans-serif;
   }
      /* Navigation link styles */
 .header .right a {
@@ -109,6 +109,9 @@
   
 }
 
+
+
+
 </style>
 </head>
 <body>
@@ -116,7 +119,7 @@
 <div class="header">
   <a class="left">Tong Fung Chuar</a>
   <div class="right">
-    <a href="./info.html">Info /</a>  <a href="./archive.html">Archive /</a>  <a href="./Contact.html">Contact</a>
+    <a href="./info">Info /</a>  <a href="./archive">Archive /</a>  <a href="./Contact">Contact</a>
   </div>
 </div>
 
@@ -149,6 +152,11 @@
   <div class="mySlides fade">
     <img src="https://res.cloudinary.com/dt5cghjrg/image/upload/v1711905479/tioqds0r3mjagwwv6jfr.jpg" style="width:100%">
   </div>
+  <div class="footer">
+    <p>       </p>
+
+        </div>
+  
 </div>
 
 <script>
