--- a/Seductionofhunger.html
+++ b/Seductionofhunger.html
@@ -296,7 +296,37 @@ body, html {
                 order: 2; /* Ensure images come after the text on mobile */
             }
         }
+        .footer {
+    position: fixed; /* Fixed positioning for the footer */
+    bottom: 0; /* Align it to the bottom */
+    left: 0; /* Align it to the left */
+    width: 100%; /* Full width */
+    margin: 0px ; /* Center the content */
+    background-color: #222; /* Footer background */
+    color: #ffffff; /* White text */
+    text-align: left; /* Align text to the right */
+    
+    padding-left: 10px;
 
+    font-size: 12px; /* Smaller text */
+    z-index: 1000; /* Ensure footer stays above other content */
+    margin: 1;
+    line-height: 1; /* Compact line spacing */
+    display: flex;
+        justify-content: space-between;
+        box-sizing: border-box;
+}
+ 
+@media only screen and (max-width: 600px) {
+    .footer {
+      width: 100%; /* Full width on smaller screens */
+        padding-left: 15px;
+        padding-right: 15px;
+        box-sizing: border-box; /* Include padding in width calculation */
+        font-size: 6px; /* Smaller text size */
+        box-sizing: border-box; /* Include padding in width calculation */
+    }
+}
     </style>
     </head>
     <body>
@@ -349,6 +379,9 @@ body, html {
 
             <!-- Add more images as needed -->
         </div>
-
+        <div class="footer">
+          <p>Image courtesy of the artist, © 2024.       </p>
+      
+              </div>
 </body>
 </html>
