--- a/archive.html
+++ b/archive.html
@@ -272,6 +272,8 @@
     text-align: left; /* Align text to the right */
     
     padding-left: 10px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 
     font-size: 12px; /* Smaller text */
     z-index: 1000; /* Ensure footer stays above other content */
@@ -287,6 +289,8 @@
       width: 100%; /* Full width on smaller screens */
         padding-left: 15px;
         padding-right: 15px;
+        padding-top: 6px;
+        padding-bottom: 6px;
         box-sizing: border-box; /* Include padding in width calculation */
         font-size: 6px; /* Smaller text size */
         box-sizing: border-box; /* Include padding in width calculation */
@@ -355,6 +359,7 @@
 
     </div>
     <div class="footer">
+      
       <p>Image courtesy of the artist, © 2024.       </p>
   
           </div>
