--- a/Graveyardofapolicecar.html
+++ b/Graveyardofapolicecar.html
@@ -346,8 +346,8 @@ body, html {
     <h1></h1>
     
     <h1></h1>
-    <p>Graveyard of a police car, aimed to reimagine a state where the authoritatrian system came to an end. The aftermath of the power collapse, a meditation where idividuals are in search of their new born, un-constructed body. 
-      A negative space where lead to an nivarna.
+    <p>"Graveyard of a Police Car" envisions a state where the authoritarian system has come to an end. It reflects on the aftermath of the collapse of power—a meditation on individuals searching for their newly born, unconstructed identities.
+      This negative space becomes a pathway leading toward a subjective nirvana.
     </p>
        
         </div>
