--- a/Occurs.html
+++ b/Occurs.html
@@ -363,8 +363,8 @@ body, html {
     <h1></h1>
     
     <h1></h1>
-    <p>This series of paintings reflect a intimate experience of violences, unseen or seen. 
-      Expressive figures and traits meditative on the events occurs under a post traumatic, self therapeutic pace of mind. </p>
+    <p>This series of paintings reflects an intimate experience of violence, both seen and unseen. 
+      Expressive figures and traits meditate on events that unfold under a post-traumatic, self-therapeutic state of mind. </p>
        
         </div>
 
