--- a/cv.html
+++ b/cv.html
@@ -261,13 +261,14 @@ body, html {
             <h1></h1>
             <section class="exhibitions">
                 <h1>SELECTED EXHIBITIONS</h1>
-                <p>- Golden Liquid: Chapter One, Ruang Biawak, Muar, Malaysia, 2024
-                <br>- Pieces of Cement, 11 Plus Studio, Johor Bahru, Malaysia, 2024
-                    <br>- Des Origines, L'école d’Art du Belfort,Belfort, France, 2023
-                    <br>- Photo-Exposition Premisse, Espace Blanc du Marais, Paris, France, 2022
-                    <br>- Cache-misère, L'école Media Art du Grand Chalon, Chalon-sur-Saône, France, 2020
-                    <br>- To Say Almost the Same, Xika Art Exhibition Hall, Hangzhou, China, 2019
-                    <br>- THEBOOKSHOW 2019 Open call showcase, NTU Centre for Contemporary Art Singapore, Singapore, 2019</p>
+                <p> - The Spring Show, Suma Orientalis Fine Art, Kuala Lumpur, Malaysia, 2024
+                <br> - Golden Liquid, Ruang Biawak, Muar, Malaysia, 2024
+                <br> - Pieces of Cement, 11 Plus Studio, Johor Bahru, Malaysia, 2024
+                    <br> - Des Origines, L'école d’Art du Belfort, Belfort, France, 2023
+                    <br> - Photo-Exposition Premisse, Espace Blanc du Marais, Paris, France, 2022
+                    <br> - Cache-misère, L'école Media Art du Grand Chalon, Chalon-sur-Saône, France, 2020
+                    <br> - To Say Almost the Same, Xika Art Exhibition Hall, Hangzhou, China, 2019
+                    <br> - THEBOOKSHOW 2019 Open call showcase, NTU Centre for Contemporary Art Singapore, Singapore, 2019</p>
                 <!-- Add more exhibition entries here -->
             </section>
             <h1></h1>
@@ -276,6 +277,7 @@ body, html {
             <section class="professional-experience">
                 <h1>PROFESSIONAL EXPERIENCES & INTERNSHIPS</h1>
                 <p> - Art Assistant, Big Pieces Studio, Kuala Lumpur, Malaysia, 2024
+                <br> - Gallery Assistant, MNP Auction House, Kuala Lumpur, Malaysia, 2024
                 <br> - Assistant Curator, Suma Orientalis Fine Art, Kuala Lumpur, Malaysia, 2023
                 <br> - Production assistant in decoration creation studio, Atelier Bournillat Sculpture (Nathalie Bournillat), Paris, France, 2022
                 <br> - Internships as a photo assistant in independent publishing studio, Ces Editions (Hubert Crabières), Paris and Argenteuil, France, 2019
