--- a/archive.html
+++ b/archive.html
@@ -319,7 +319,7 @@
             <a href="./Occurs" class="nav-item">Occurs /</a>
             <a href="./Graveyardofapolicecar" class="nav-item">Graveyard of a Police Car /</a>
             <a href="./Inthewordswhereyou" class="nav-item">In The Words Where You've Touche Are Soft /</a>
-            <a href="./Sitonthemoitedchair" class="nav-item">Sit on the Moistened hair /</a>
+            <a href="./Sitonthemoitedchair" class="nav-item">Sit on the Moistened Chair /</a>
             <a href="./Caress" class="nav-item">Caress /</a>
             <a href="./chamberofaloosingchain" class="nav-item">Chamber of a Loosing Chain and Unknown Temperature /</a>
             <a href="./breathinggap" class="nav-item">Breathing Gap /</a>
