--- a/Graveyardofapolicecar.html
+++ b/Graveyardofapolicecar.html
@@ -346,8 +346,8 @@ body, html {
     <h1></h1>
     
     <h1></h1>
-    <p>"Graveyard of a Police Car" envisions a state where the authoritarian system has come to an end. It reflects on the aftermath of the collapse of power—a meditation on individuals searching for their newly born, unconstructed identities.
-      This negative space becomes a pathway leading toward a subjective nirvana.
+    <p>Graveyard of a Police Car envisions a state where the authoritarian system has come to an end. It reflects on the aftermath of the collapse of power—a meditation on individuals searching for their newly born, unconstructed identities. This negative space becomes a pathway leading toward subjective reconciliation.
+      The narrative draws from the experiences of minorities who have been threatened unconsciously or psychologically under the weight of strong right-wing authorities. In the video, as we share our ideas, our visions and imaginations intertwine, forming a poetic dream—a mourning of the vehicle’s corpse before us.
     </p>
        
         </div>
