--- a/Occurs.html
+++ b/Occurs.html
@@ -363,8 +363,11 @@ body, html {
     <h1></h1>
     
     <h1></h1>
-    <p>This series of paintings reflects an intimate experience of violence, both seen and unseen. 
-      Expressive figures and traits meditate on events that unfold under a post-traumatic, self-therapeutic state of mind. </p>
+    <p>This series of paintings reflects an intimate experience of violence, both seen and unseen. Expressive figures and traits meditate on events that unfold under a post-traumatic, self-therapeutic state of mind. 
+      The compositions draw inspiration from existential fears, such as the looming threat of being crushed while crossing a city street, or the spectral persistence of physical pain—its tangible form vanished, yet it lingers in the imagination. 
+
+      Violence, as an indelible aspect of human history, embedded deeply in every fragment of daily life, manifesting both overtly and insidiously. 
+      These works compel the viewer to reflect not only on violence as an inevitability but also on the deeply personal and collective ways we attempt to reconcile, navigate, or resist. </p>
        
         </div>
 
