--- a/info.html
+++ b/info.html
@@ -372,7 +372,7 @@ body, html {
 
   
   <div class="footer">
-    <p>Visual identities designed by Inès Aourdache. Image courtesy of the designer and the artist, © 2024.       </p>
+    <p>Visual identities designed by Inès Mills. Image courtesy of the designer and the artist, © 2024.       </p>
 
         </div>
 </body>
